<resources>
    <string name="app_name">ShoppingGrid</string>
    <string name="home">home</string>
    <string name="cart">cart</string>
    <string name="favourite" />
    <string name="profile" />



    <string name="my_profile">My Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="shipping_addresses">Shipping Addresses</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="my_reviews">My Reviews</string>
    <string name="settings">Settings</string>
    <string name="order_no">Order no:</string>
    <string name="tracking_no">Tracking no:</string>
    <string name="quantity">Quantity:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="details">Details</string>
    <string name="order_details">Order_Details</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="change">Change</string>
    <string name="notification">Notifications</string>
    <string name="sales">Sales</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="old_password">Old Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_password">New Password</string>
    <string name="password_change">Password Change</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="order_information">Order Information</string>
    <string name="shipping_address">Shipping Address:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="delivery_method">Delivery Method:</string>
    <string name="save_password">Save Password</string>
    <string name="re_order">Re-Order</string>
    <string name="leave_review">Leave Review</string>
    <string name="color">Color:</string>
    <string name="units">Units:</string>
    <string name="reviews">Reviews</string>
    <string name="my_address">My Address</string>
    <string name="change_address">Change Address</string>
    <string name="save">Save</string>
    <string name="current_address">Current Address:</string>
    <string name="update_address">Update Address:</string>
    <string name="new_address">New Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout_now">Checkout Now</string>
    <string name="total">Total</string>
    <string name="your_cart">YOUR CART</string>
</resources>