<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="480dp"
    android:padding="12dp"
    android:backgroundTint="@color/white"
    app:layout_constraintHeight_percent="0.5"

    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView12"
        style="@style/medium_txt_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/current_address"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCurrentAddress"
        style="@style/medium_txt_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="adkdkksjfjshdjkshflkjdhsjlfd,sljghfkl"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView12"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView12" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView13"
        style="@style/medium_txt_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/update_address"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvCurrentAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentAddress" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlpass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:hint="@string/new_address"
        android:padding="2dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/white"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView13">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_bg"
            android:inputType="textPostalAddress"
            android:padding="4dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="44dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="130dp"
        android:layout_height="8dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView10"
        style="@style/medium_txt_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/change_address"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/materialDivider"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/materialDivider"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSavePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/round_btn_bg"
        android:backgroundTint="@color/secondary_app_color"
        android:text="@string/save"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tlpass"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/tlpass"
        app:layout_constraintTop_toBottomOf="@+id/tlpass" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>