<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    app:layout_constraintHeight_percent="0.5"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="12dp"

    >

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="130dp"
        android:layout_height="8dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTop"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/medium_txt_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_change"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tlpass"
        app:layout_constraintEnd_toEndOf="@+id/materialDivider"
        app:layout_constraintStart_toStartOf="@+id/materialDivider"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider"
        app:layout_constraintVertical_bias="0.554" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlpass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:hint="@string/old_password"
        android:layout_marginTop="60dp"
        android:padding="2dp"
        app:boxBackgroundColor="@color/white"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_bg"
            android:inputType="textPassword"
            android:padding="4dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="44dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlnewpass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:layout_marginTop="40dp"
        android:hint="@string/new_password"
        android:padding="2dp"
        app:boxBackgroundColor="@color/white"

        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/btnForgetPassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_bg"
            android:inputType="textPassword"
            android:padding="4dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="44dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:layout_marginTop="16dp"
        android:hint="@string/repeat_new_password"
        android:padding="2dp"

        app:boxBackgroundColor="@color/white"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tlnewpass"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRepeatNewPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/et_bg"
            android:inputType="textPassword"
            android:padding="4dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="44dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnForgetPassword"
        style="@style/medium_txt_theme"
        android:background="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/forget_password"
        app:layout_constraintEnd_toEndOf="@+id/tlpass"
        app:layout_constraintTop_toBottomOf="@+id/tlpass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSavePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textStyle="bold"
        android:background="@drawable/round_btn_bg"
        android:backgroundTint="@color/secondary_app_color"
        android:text="@string/save_password"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

</androidx.constraintlayout.widget.ConstraintLayout>